# flutter_from_scratch

./: .gitignore  .gn  BUILD.gn  CMakeLists.txt  README.md
flutter/: BUILD.gn  flutter_application.cc  flutter_application.h  macros.h  main.cc  pi_display.cc  pi_display.h  utils.cc  utils.h
tools/: setup_gn.sh  setup_sdk.sh
